# chatserver

./: CMakeLists.txt  README.md
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/mysql/: connection.hpp  connectionpool.hpp  mysql.hpp
include/server/redis/: redis.hpp
include/server/sqlopr/: friendopr.hpp  group.hpp  groupopr.hpp  groupuser.hpp  offmsgopr.hpp  user.hpp  useropr.hpp
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/mysql/: connection.cpp  connectionpool.cpp  mysql.cpp
src/server/redis/: redis.cpp
src/server/sqlopr/: friendopr.cpp  groupopr.cpp  offmsgopr.cpp  useropr.cpp
